updated modules to esnext and nodenext

--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "start": "concurrently \"tsc -w\" \"nodemon dist/js/app.js\""
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
