--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/raleway": "^4.5.12",
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@stitches/react": "^1.2.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
