--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,15 @@
     "@fontsource/raleway": "^4.5.12",
     "@fvilers/disable-react-devtools": "^1.3.0",
     "@stitches/react": "^1.2.8",
+    "dompurify": "^3.0.3",
+    "marked": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.2",
+    "@types/marked": "^5.0.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
